--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "module": "CommonJS",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+     
+      
     },
     "moduleResolution": "Node",
     "outDir": "dist",
@@ -16,5 +18,6 @@
     "types": ["vitest/globals"]
   },
   "include": ["src/**/*"],
+  
   "exclude": ["node_modules"]
 }
