--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,9 +16,8 @@ jobs:
       - name: Use the latest stable Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
           cache: "npm"
-
       - name: Install Dependencies
         run: npm ci
 
