--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
   "name": "clean-architecture-express-boilerplate",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A clean architecture Express boilerplate backend",
-  "author": "Johan Garcia",
-  "repository": "DevJohanAdrian/clean-architecture-express-boilerplate",
+  "author": "DevJohanAdrian",
   "license": "MIT",
-  "main": "index.ts",
   "private": true,
+  "homepage": "https://github.com/DevJohanAdrian/clean-architecture-express-boilerplate#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DevJohanAdrian/clean-architecture-express-boilerplate.git"
+  },
+  "bugs": {
+    "url": "https://github.com/DevJohanAdrian/clean-architecture-express-boilerplate/issues"
+  },
+  "keywords": [
+    "typescript",
+    "express",
+    "boilerplate"
+  ],
+  "engines": {
+    "node": ">=22.x",
+    "npm": ">=10.x"
+  },
   "prisma": {
     "seed": "node prisma/seed.js"
   },
+  "main": "src/index.ts",
   "scripts": {
     "dev": "tsx watch --clear-screen=false src/index.ts | pino-pretty",
     "build": "tsup",
