--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,12 @@ services:
     volumes:
       - ./db/postgres:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: pruebas_express_clean_architecture
-      POSTGRES_USER: admin_clean_architecture
-      POSTGRES_PASSWORD: 123456
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - 5432:5432
-  
+
   pgAdmin:
     container_name: pgAdmin_clean_architecture
     image: dpage/pgadmin4
@@ -23,9 +23,9 @@ services:
     volumes:
       - ./db/pgadmin:/var/lib/pgadmin
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@express.com
-      PGADMIN_DEFAULT_PASSWORD: 123456
-      PGADMIN_LISTEN_PORT: 80
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT} 
     ports:
       - 8080:80  
     
