--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
+      "@presentation/*": ["src/frameworks&InterfaceAdapaters&Presentation/*"],
      
       
     },
