Keep alive configuration

--- a/.env.test
+++ b/.env.test
@@ -2,6 +2,8 @@
 NODE_ENV="test" # Options: 'development', 'production'
 PORT="8081"            # The port your server will listen on
 HOST="localhost"       # Hostname for the server
+PUBLIC_PATH="public"
+
 
 # CORS Settings
 CORS_ORIGIN="http://localhost:*" # Allowed CORS origin, adjust as necessary
@@ -12,3 +14,10 @@ COMMON_RATE_LIMIT_MAX_REQUESTS="20" # Max number of requests per window per IP
 
 # Database url
 DATABASE_URL='postgresql://postgres:123456@localhost:5432/Pruebas'
+POSTGRES_USER= admin_clean_architecture
+POSTGRES_PASSWORD= 123456
+POSTGRES_DB= pruebas_express_clean_architecture
+#pg admin
+PGADMIN_DEFAULT_EMAIL= admin@express.com
+PGADMIN_DEFAULT_PASSWORD= 123456
+PGADMIN_LISTEN_PORT=80
