--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,8 +19,11 @@
       "runtimeArgs": ["run", "start"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
-      "skipFiles": ["<node_internals>/**", "${workspaceFolder}/node_modules/**"],
+      "skipFiles": [
+        "<node_internals>/**",
+        "${workspaceFolder}/node_modules/**"
+      ],
       "preLaunchTask": "npm: build"
     }
-    ]
-  }
+  ]
+}
