--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "build": "tsup",
     "start": "node dist/index.js",
     "clean": "rimraf dist coverage",
-    "lint": "biome check src/",
-    "lint:fix": "biome check src/ --fix",
-    "format": "biome format src/",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
+    "format": "prettier --write src/**/*.{js,ts}",
     "prepare": "husky",
     "prisma-postinstall": "prisma generate",
     "prisma-migration": "prisma migrate dev",
@@ -62,16 +62,21 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.3",
+    "@eslint/js": "^9.15.0",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.7.5",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.12.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "pino-pretty": "^11.0.0",
+    "prettier": "^3.3.3",
     "prisma": "^5.21.0",
     "rimraf": "^6.0.0",
     "supertest": "^7.0.0",
@@ -79,6 +84,7 @@
     "tsup": "^8.0.2",
     "tsx": "^4.7.2",
     "typescript": "^5.4.4",
+    "typescript-eslint": "^8.15.0",
     "vite-tsconfig-paths": "^5.0.0",
     "vitest": "^2.0.0"
   },
