--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,14 @@
 # Ignore artifacts:
 build
 coverage
+
+
+/dist
+/.github
+/coverage
+/node_modules
+.travis.yml
+/projects/portal/docs
+/projects/portal/src/app/documentation/samples
+/projects/portal/src/assets/js
+*.md
