--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,11 @@
 {
-  "semi": true,
+  "printWidth": 120,
   "singleQuote": true,
+  "useTabs": false,
   "tabWidth": 2,
-  "trailingComma": "es5"
+  "semi": true,
+  "bracketSpacing": true,
+  "quoteProps": "preserve",
+  "arrowParens": "avoid",
+  "trailingComma": "none"
 }
