--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "lint:fix": "eslint src/ --fix",
     "format": "prettier --write src/**/*.{js,ts}",
     "prepare": "husky",
+    "husky:disable": "ren .husky .husky.disabled",
+    "husky:enable": "ren .husky.disabled .husky",
     "prisma-postinstall": "prisma generate",
     "prisma-migration": "prisma migrate dev",
     "prisma-seed": "prisma db seed",
@@ -62,6 +64,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
     "@eslint/js": "^9.15.0",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
@@ -70,8 +74,6 @@
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.12.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
@@ -90,7 +92,8 @@
   },
   "lint-staged": {
     "*.{js,ts,cjs,mjs,d.cts,d.mts,json,jsonc}": [
-      "biome check --apply --no-errors-on-unmatched"
+      "npm run lint:fix",
+      "npm run format"
     ]
   },
   "tsup": {
