fix: test suits with errors and test-sever set up

--- a/.env.test
+++ b/.env.test
@@ -13,7 +13,9 @@ COMMON_RATE_LIMIT_WINDOW_MS="1000" # Window size for rate limiting (ms)
 COMMON_RATE_LIMIT_MAX_REQUESTS="20" # Max number of requests per window per IP
 
 # Database url
-DATABASE_URL='postgresql://postgres:123456@localhost:5432/Pruebas'
+# DATABASE_URL='postgresql://postgres:123456@localhost:5432/Pruebas'
+DATABASE_URL='postgresql://admin_clean_architecture:123456@localhost:5432/pruebas_express_clean_architecture'
+
 POSTGRES_USER= admin_clean_architecture
 POSTGRES_PASSWORD= 123456
 POSTGRES_DB= pruebas_express_clean_architecture
