--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@
 services:
   db:
     container_name: clean_architecture_db
-    image: postgres:17
+    image: postgres:14.15-alpine3.20
     restart: always #en caso de errores o paros, se reinicia
     volumes:
       - ./db/postgres:/var/lib/postgresql/data
@@ -20,8 +20,8 @@ services:
     depends_on:
       - db
     restart: always
-    #volumes:
-    #  - ./db/pgadmin:/var/lib/pgadmin
+    volumes:
+     - ./db/pgadmin:/var/lib/pgadmin
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
