--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "dev": "tsx watch --clear-screen=false src/index.ts | pino-pretty",
     "build": "tsup",
-    "start": "node dist/index.js",
+    "start": "node dist/presentation/index.js",
     "clean": "rimraf dist coverage",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
