feat: docker new changes

--- a/.env.template
+++ b/.env.template
@@ -21,3 +21,6 @@ POSTGRES_DB= TEST_express_clean_architecture
 PGADMIN_DEFAULT_EMAIL= admin@express.com
 PGADMIN_DEFAULT_PASSWORD= 123456
 PGADMIN_LISTEN_PORT=80
+
+# Docker
+STAGE=dev
