--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
 #version: '3.9' #ya no es necesaria
 
 services:
-  app: # construye una imagen usando el dockerfile
-    build: # apunta al dockerfile y toma el stage de dev
-      context: . # Especifica la carpeta desde donde se ejecutarán las instrucciones del Dockerfile. esta es la raiz de mi aplicacion donde esta todo
+  # construye una imagen usando el 
+  app: 
+    # apunta al dockerfile y toma el stage de dev
+    build: 
+    # Especifica la carpeta desde donde se ejecutarán las instrucciones del Dockerfile. esta es la raiz de mi aplicacion donde esta todo
+      context: . 
       target: ${STAGE}  # Selecciona la etapa "prod", S i se cambia al stage de prod (Runner) de dockerfile ejecutara todos los pasos para cumplir con ese stage
       dockerfile: Dockerfile
     #command: ["sh", "-c", "npm run migrate && npm start"]
@@ -15,8 +18,21 @@ services:
     ports:
       - ${PORT}:${PORT}
     environment:
-      - name=value
-
+      - NODE_ENV=${NODE_ENV} 
+      - PORT=${PORT}
+      - HOST=${HOST}
+      - PUBLIC_PATH=${PUBLIC_PATH}
+      - CORS_ORIGIN=${CORS_ORIGIN}
+      - COMMON_RATE_LIMIT_WINDOW_MS=${COMMON_RATE_LIMIT_WINDOW_MS}
+      - COMMON_RATE_LIMIT_MAX_REQUESTS=${COMMON_RATE_LIMIT_MAX_REQUESTS}
+      - DATABASE_URL=${DATABASE_URL}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
+      - PGADMIN_LISTEN_PORT=${PGADMIN_DEFAULT_PASSWORD}
+      - STAGE=${STAGE}
 
   db:
     container_name: clean_architecture_db
