--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
-  "main": "src/index.ts",
+  "main": "src/presentation/index.ts",
   "scripts": {
-    "dev": "tsx watch --clear-screen=false src/index.ts | pino-pretty",
+    "dev": "tsx watch --clear-screen=false src/presentation/index.ts | pino-pretty",
     "build": "tsup",
     "start": "node dist/presentation/index.js",
     "clean": "rimraf dist coverage",
