--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,10 +28,14 @@ jobs:
     
     - name: Docker Login
       env:
-        DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        DOCKER_USER: ${{ secrets.DOCKER_USER }}
+        
+     
         
       run: |
+        echo "user:" $DOCKER_USER
+        echo "password:" $DOCKER_PASSWORD
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         
     - name: Build Docker Image
